llvm/test/tools/llubi/metadata_noundef_ub.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  %alloc = alloca i32
  store i32 -1, ptr %alloc
  %res = load i32, ptr %alloc, !noundef !{}, !range !{i32 0, i32 10}
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc = alloca i32, align 4 => ptr 0x8 [alloc]
; CHECK-NEXT:   store i32 -1, ptr %alloc, align 4
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   %res = load i32, ptr %alloc, align 4, !range !0, !noundef !1 at @main
; CHECK-NEXT: Immediate UB detected: The value poison violates !noundef metadata.
; CHECK-NEXT: error: Execution of function 'main' failed.
